fixed view main page
Fixed overlapping elements because height was fixed.
changed width pictures for smaller screens.

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ main {
   height: 4rem;
 }
 .banner, .about, .projects, .experience {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -130,6 +130,10 @@ h3 {
   width: 100%;
   margin: 2rem;
   justify-content: space-between;
+}
+
+.boxes img {
+  max-width: 300px;
 }
 
 .temp img {
